# wagon

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
src/: backup.rs  config.rs  copy.rs  dest.rs  init.rs  link.rs  list.rs  main.rs  print.rs  pull.rs  repo.rs  show.rs  structs.rs  update.rs  wget.rs
test/repo/bash/: .wagon.toml
test/repo/zsh/: .wagon.toml
tests/: color.rs  symlink.rs
