[package]
authors = ["yasuyuky <yasuyuki.ymd@gmail.com>"]
description = "A command line utility to manage configuration files in one place"
edition = "2024"
exclude = [".*"]
license = "MIT"
name = "wagon"
repository = "https://github.com/yasuyuky/wagon"
version = "0.4.0"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
clap_complete = "4.5.59"
colored = "3.0.0"
difflib = "0.4.0"
dirs = "6.0.0"
glob = "0.3.3"
ignore = "0.4.23"
libc = "0.2.177"
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.44", features = ["local-offset", "formatting"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
