[package]
authors = ["yasuyuky <yasuyuki.ymd@gmail.com>"]
description = "A command line utility to manage configuration files in one place"
edition = "2024"
exclude = [".*"]
license = "MIT"
name = "wagon"
repository = "https://github.com/yasuyuky/wagon"
version = "0.4.0"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.5.66"
colored = "3.1.1"
difflib = "0.4.0"
dirs = "6.0.0"
glob = "0.3.3"
ignore = "0.4.25"
libc = "0.2.182"
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.47", features = ["local-offset", "formatting"] }
toml = "1.0.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
